--- a/styles/style.css
+++ b/styles/style.css
@@ -402,7 +402,7 @@
 
 .footer {
   box-sizing: border-box;
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: #ffffff;
   padding: 60px 80px 102px;
   font-size: 16px;
@@ -428,7 +428,6 @@
 .footer__logo {
   width: 116px;
   height: 21px;
-  margin-left: 80px;
 }
 
 .footer__list {
@@ -442,9 +441,12 @@
   margin-bottom: 16px;
 }
 
+.footer__list-item:last-of-type {
+  margin-bottom: 0;
+}
+
 .footer__column-heading {
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin: 0 0 20px;
 }
 
 .footer__column-link {
@@ -452,14 +454,20 @@
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.footer__column-link:hover {
+  color: #c1c1c1;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
   margin-top: 108px;
-  margin-left: 80px;
 }
