review submission one

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@
   list-style-type: none;
   align-items: center;
   margin: 8px 0 0;
+  padding: 0;
 }
 
 .nav__link {
@@ -51,6 +52,7 @@
   line-height: 76px;
   font-weight: 500;
   margin-top: 150px;
+  margin-bottom: 0px;
 }
 
 .header__description {
@@ -58,6 +60,7 @@
   font-size: 20px;
   line-height: 30px;
   margin-top: 32px;
+  margin-bottom: 0px;
 }
 
 .header__image {
@@ -69,7 +72,7 @@
 }
 
 .header__footer {
-  position: absolute;
+  margin-top: auto;
   left: 0;
   bottom: 40px;
   width: 100%;
@@ -379,14 +382,16 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  flex-wrap: wrap;
   margin-left: 120px;
+  display: flex;
+  flex-direction: column;
   gap: 32px;
   z-index: 1;
 }
 
 .about__paragraph {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .about__circle {
@@ -404,15 +409,15 @@
   box-sizing: border-box;
   background-color: #1f1f1f;
   color: #ffffff;
-  padding: 60px 80px 102px;
+  padding: 60px 102px 60px 80px;
   font-size: 16px;
   line-height: 20px;
+  min-height: 224px;
 }
 
 .footer__columns {
   display: flex;
   justify-content: space-between;
-  min-height: 224px;
 }
 
 .footer__column_content_hours {
@@ -422,7 +427,6 @@
 
 .footer__column_content_social {
   margin-left: 100px;
-  margin-right: 102px;
 }
 
 .footer__logo {
@@ -470,4 +474,5 @@
 
 .footer__copyright {
   margin-top: 108px;
+  margin-bottom: 0px;
 }
