--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,8 @@
   padding: 30px 80px 0;
   position: relative;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav {
@@ -76,6 +78,7 @@
 
 .header__footer {
   margin-top: auto;
+  position: absolute;
   left: 0;
   bottom: 40px;
   width: 100%;
@@ -426,7 +429,6 @@
 
 .footer__column_content_hours {
   margin-left: auto;
-  margin-right: 100px;
 }
 
 .footer__column_content_social {
